# lexa-nlp-platform

./: .gitignore  .replit  LICENSE  README.md  README_SUPABASE_SETUP.md  analysis.py  app.py  config.py  database.py  lexa.md  merge_all_branches_to_main.sh  pyproject.toml
.streamlit/: config.toml
assets/: style.css  styles.css
attached_assets/: Pasted--Framework-de-M-tricas-de-Qualidade-Textual-Dimens-es-Fundamentais-de-An-lise-1-Coes--1745173692044.txt  Pasted--Framework-de-Valida-o-Cient-fica-1-Protocolos-de-Valida-o-M-trica-1-1-Valida-o-In-1745173643755.txt  Pasted--LEXA-Advanced-CSS-Technical-Implementation-Critical-Analysis-of-Visual-Identity-Color-1749410735839_1749410735841.txt  Pasted--LEXA-NLP-Service-Production-Ready-Implementation-Complete-System-Architecture-Refactoring--1749410879506_1749410879508.txt  Pasted--LEXA-Production-NLP-Service-Enhanced-version-with-security-performance-and-reliability-impro-1749410894532_1749410894533.txt  Pasted--LEXA-Professional-CSS-Implementation-Advanced-technical-implementation-based-on-brand-vi-1749410721962_1749410721963.txt  Pasted--name-title-level-facing-categor-1749414149588_1749414149590.txt  Pasted-Com-base-na-an-lise-dos-arquivos-agora-posso-detalhar-os-par-metros-de-avalia-o-e-formas-de-exibi--1745179421242.txt  Pasted-Modelo-lingu-stico-completo-n-o-encontrado-Usando-modelo-simplificado-ValueError-Found-array-w-1745181633097.txt  Pasted-erDiagram-USER-o-TEXT-submits-USER-uuid-id-string-name--1745173660574.txt
components/: advanced_ui.py  auth.py  layout.py  metrics_dashboard.py  plan_upgrade.py  sidebar.py  (+3 more)
(+33 files in other folders)
