[project]
name = "lexa"
version = "0.1.1"
description = "Plataforma de análise linguística interativa e extensível para grandes volumes de texto"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.8.1",
    "numpy>=1.26.0",
    "pandas>=2.2",
    "plotly>=5.18.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.4.0",
    "spacy>=3.7.2",
    "streamlit-extras>=0.3.0",
    "streamlit>=1.32.0",
    "streamlit-aggrid>=0.3.4",
    "streamlit-card>=1.0.2",
    "streamlit-elements>=0.1.0",
    "matplotlib>=3.8.0",
    "pydeck>=0.8.0",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "assets*", "attached_assets*"]
